crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__and_combination.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "nodes": [
      {
        "lhs": {
          "name": "name",
          "type": "attr"
        },
        "op": "regex_match",
        "raw": "name =~ ^[A-Z]",
        "rhs": {
          "pattern": "^[A-Z]",
          "type": "regex"
        },
        "type": "atom"
      },
      {
        "lhs": {
          "expr": {
            "name": "lines",
            "type": "projection"
          },
          "type": "number"
        },
        "op": "le",
        "raw": "lines <= 60",
        "rhs": {
          "expr": {
            "type": "literal",
            "value": 60.0
          },
          "type": "number"
        },
        "type": "atom"
      }
    ],
    "type": "and"
  }
}
