crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__count_pairs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "domain": {
            "kind": "method",
            "type": "children"
          },
          "type": "pairs"
        },
        "filter": {
          "lhs": {
            "projection": {
              "lhs": "name",
              "side": "a"
            },
            "type": "pair_projection"
          },
          "op": "eq",
          "raw": "a.name = b.name",
          "rhs": {
            "projection": {
              "lhs": "name",
              "side": "b"
            },
            "type": "pair_projection"
          },
          "type": "atom"
        },
        "type": "count"
      },
      "type": "number"
    },
    "op": "eq",
    "raw": "count(pairs(method), a.name = b.name) = 0",
    "rhs": {
      "expr": {
        "type": "literal",
        "value": 0.0
      },
      "type": "number"
    },
    "type": "atom"
  }
}
