crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__current_nonnumeric_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `lines > current.name`: number expressions require numeric current projections",
  "input": "lines > current.name"
}
