crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__disjoint_and_precedence.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "nodes": [
      {
        "lhs": {
          "name": "kind",
          "type": "attr"
        },
        "op": "eq",
        "raw": "kind = 'class'",
        "rhs": {
          "type": "string",
          "value": "class"
        },
        "type": "atom"
      },
      {
        "node": {
          "nodes": [
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'X'",
              "rhs": {
                "type": "string",
                "value": "X"
              },
              "type": "atom"
            },
            {
              "lhs": {
                "name": "name",
                "type": "attr"
              },
              "op": "eq",
              "raw": "name = 'Y'",
              "rhs": {
                "type": "string",
                "value": "Y"
              },
              "type": "atom"
            }
          ],
          "type": "and"
        },
        "type": "not"
      }
    ],
    "type": "and"
  }
}
